Prevent content overflow on small devices for uk-float-*

--- a/src/less/utility.less
+++ b/src/less/utility.less
@@ -97,10 +97,13 @@
 
 /*
  * Float blocks
+ * 1. Prevent content overflow on small devices
  */
 
 .uk-float-left { float: left; }
 .uk-float-right { float: right; }
+
+[class*='uk-float-'] { max-width: 100%; } /* 1 */
 
 
 /* Alignment of images and objects
